<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

    <Button
            android:id="@+id/maBtTrabajadores"
            android:text="@string/ver_trabajadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/maBtInsertarTrabajador"
            android:text="@string/insertar_trabajador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/maBtBorrarTrabajadores"
            android:text="@string/borrar_trabajadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/maEtBuscar"
            android:hint="@string/nombre_trabajador"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/maBtTrabajador"
            android:text="@string/buscar_trabajador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>
