<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/litNombreAux"
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/litNombre"
            android:textColor="@color/colorPrimaryDark"
            android:layout_toRightOf="@+id/litNombreAux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/litPuestoAux"
            android:layout_below="@+id/litNombre"
            android:text="@string/puesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/litPuesto"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/litNombre"
            android:layout_toRightOf="@+id/litPuestoAux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/litAntiguedadAux"
            android:layout_below="@+id/litNombre"
            android:text="@string/antiguedad"
            android:layout_toLeftOf="@+id/litAntiguedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/litAntiguedad"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/litNombre"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</RelativeLayout>
